--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,15 +1,9 @@
 %aside#supporters{ :class => 'center-wrapper' }
   %h1 Sponsorit
   %ul#supporter-carousel
-    %li= link_to image_tag("/images/supporters/eepee.gif", :size => '190x39'), "http://www.eepee.fi/", :rel => "nofollow", :title => "Etelä-Pohjanmaan Osuuskauppa"
-    %li= link_to image_tag("/images/supporters/supersport.png", :size => '190x122'), "http://www.supersport.fi/", :rel => "nofollow", :title => "Supersport"
-    %li= link_to image_tag("/images/supporters/nordea.png", :size => '150x39'), "http://www.nordea.fi/", :rel => "nofollow", :title => "Nordea"
-    %li= link_to image_tag("/images/supporters/botniakorro.gif", :size => '190x28'), "http://www.botnia-korro.fi/", :rel => "nofollow", :title => "Botnia-Korro Oy"
-    %li= link_to image_tag("/images/supporters/kora_logo.png", :size => '146x130'), "http://sahkoa.net/", :rel => "nofollow", :title => "KORA Installations Oy"
-    %li= link_to image_tag("/images/supporters/piikki_logo.png", :size => '146x67'), "http://www.pizzeriapiikki.fi/", :rel => "nofollow", :title => "Pizzeria Piikki"
-    %li= link_to image_tag("/images/supporters/lemminkainen_logo.png", :size => '190x48'), "http://www.lemminkainen.fi/", :rel => "nofollow", :title => "Lemminkäinen Oyj"
-    %li= link_to image_tag("/images/supporters/ilmajoen_omeijeri_logo.png", :size => '129x130'), "http://www.ilmajoenosuusmeijeri.fi/", :rel => "nofollow", :title => "Ilmajoen Osuusmeijeri"
-    %li= image_tag("/images/supporters/ilmajoen_apteekki.png", :size => '190x42')
-    
+    - Sponsor.all.each do |sponsor|
+      %li= link_to_unless sponsor.url.blank?, image_tag(sponsor.logo.url(:normal), :size => sponsor.logo_dimensions),
+        sponsor.url, :rel => "nofollow", :title => sponsor.name
+  
 .center-wrapper
   %p © Ilmajoen salibandy 2011
