Added content for meta tags.

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,8 +1,9 @@
 %head
   %meta{ :charset => 'UTF-8' }
   %meta{ "http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1" }
-  %meta{ :name => "description", :content => "" }
-  %meta{ :name => "author", :content => "" }
+  %meta{ :name => "description", :content => "Sähäkkää salibandyä Ilmajoelta" }
+  %meta{ :name => "keywords", :content => "Ilmajoen, Salibandy, ISB, Ilmajoki" }
+  %meta{ :name => "author", :content => "Ilmajoen Salibandy" }
   
   %link{ :rel => "shortcut icon", :href => "/images/favicon.ico", :type => "image/x-icon"}/
   %title= "Ilmajoen Salibandy"
