Fixed incorrect HTML element.

--- a/app/views/news/show.html.haml
+++ b/app/views/news/show.html.haml
@@ -1,7 +1,7 @@
 %article#news
   %header
     %h1= @news
-  %meta
+  %div.meta
     %time{:datetime => html5_datetime(@news.created_at), :pubdate => :pubdate}= @news.created_at
     = " | "
     = @news.sections.to_sentence :two_words_connector => " ja ", :last_word_connector => ", ja "
