--- a/app/views/section/news.html.haml
+++ b/app/views/section/news.html.haml
@@ -5,7 +5,7 @@
 
 - @news.each do |news_post|
   %article.entry
-    %h2= link_to news_post, news_post_path(news_post)
+    %h2.news= link_to news_post, news_post_path(news_post)
     %time.meta{:datetime => html5_datetime(news_post.created_at)}= news_post.created_at
     %p= truncate(news_post.content, :length => 120, :separator => ' ')
     
