--- a/public/stylesheets/admin_style.css
+++ b/public/stylesheets/admin_style.css
@@ -323,6 +323,14 @@ tr.row_contains_errors { background-color:#f2c0bd; }
 
 .sortable-sponsors tr { cursor:move; }
 
+div.note {
+  font-weight: bold;
+  margin:10px;
+  background-color:#EEEE33;
+  padding:10px;
+  border:1px solid #F68D28;
+}
+
 footer {
   border-top:2px solid #e4dee1;
   font:bold normal 0.90em/1.4em Arial, Helvetica, sans-serif;
