--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,7 +7,7 @@
   %h1 Tuoreimmat uutiset
   - @news.each do |news_post|
     .entry
-      %h2= link_to news_post, news_post_path(news_post)
+      %h2.news= link_to news_post, news_post_path(news_post)
       .meta
         %time{:datetime => html5_datetime(news_post.created_at)}= news_post.created_at
         = " | "
