Changed help text class to note.

--- a/app/views/admin/roles/index.html.haml
+++ b/app/views/admin/roles/index.html.haml
@@ -17,7 +17,7 @@
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_seasons_path
   = link_to 'Takaisin', admin_seasons_path
 
-.help= "Huom. Muutokset tallentuvat heti, kun pelaaja raahataan johonkin laatikoista."
+.note= "Huom. Muutokset tallentuvat heti, kun pelaaja raahataan johonkin laatikoista."
 
 #member-selection
   .member-column
