Added a note if no teams are added to the Partition.

--- a/app/views/admin/team_standings/edit_multiple.html.haml
+++ b/app/views/admin/team_standings/edit_multiple.html.haml
@@ -16,31 +16,35 @@
 = label_tag :auto_sort_standings, 'Järjestä sarjataulukko muutoksien jälkeen'
 
 %h2 #{@partition}
-
-= form_tag(update_multiple_admin_partition_team_standings_path(@partition), :method => 'put') do
-  %table
-    %thead
-      %tr
-        %th
-        %th O
-        %th V
-        %th T
-        %th H
-        %th MS
-        %th P
-      %tbody
-        - for standing in @standings
-          %tr{ :class => !standing.errors.empty? && "row_contains_errors" }
-            %td
-              = image_tag 'two_way_arrow.png', :size => '16x16'
-              = standing
-            %td.games-played-cell= standing.games_played
-            %td= number_field_tag "standings[#{standing.id}][wins]", standing.wins, :size => 3, :in => 0...300
-            %td= number_field_tag "standings[#{standing.id}][overtimes]", standing.overtimes, :size => 3, :in => 0...300
-            %td= number_field_tag "standings[#{standing.id}][losses]", standing.losses, :size => 3, :in => 0...300
-            %td
-              = number_field_tag("standings[#{standing.id}][goals_for]", standing.goals_for, :size => 4, :min => 0) + "-"
-              = number_field_tag "standings[#{standing.id}][goals_against]", standing.goals_against, :size => 4, :min => 0
-            %td.points-cell= standing.points
-
-  = submit_tag 'Tallenna'
+- if @standings.count > 0
+  = form_tag(update_multiple_admin_partition_team_standings_path(@partition), :method => 'put') do
+    %table
+      %thead
+        %tr
+          %th
+          %th O
+          %th V
+          %th T
+          %th H
+          %th MS
+          %th P
+        %tbody
+          - for standing in @standings
+            %tr{ :class => !standing.errors.empty? && "row_contains_errors" }
+              %td
+                = image_tag 'two_way_arrow.png', :size => '16x16'
+                = standing
+              %td.games-played-cell= standing.games_played
+              %td= number_field_tag "standings[#{standing.id}][wins]", standing.wins, :size => 3, :in => 0...300
+              %td= number_field_tag "standings[#{standing.id}][overtimes]", standing.overtimes, :size => 3, :in => 0...300
+              %td= number_field_tag "standings[#{standing.id}][losses]", standing.losses, :size => 3, :in => 0...300
+              %td
+                = number_field_tag("standings[#{standing.id}][goals_for]", standing.goals_for, :size => 4, :min => 0) + "-"
+                = number_field_tag "standings[#{standing.id}][goals_against]", standing.goals_against, :size => 4, :min => 0
+              %td.points-cell= standing.points
+  
+    = submit_tag 'Tallenna'
+- else
+  %div.note
+    = "Kausiosiolle ei ole lisätty yhtään joukkuetta."
+    = "Voit lisätä joukkueita #{link_to('kausiosiosivulta', admin_partition_path(@partition))}.".html_safe
