Added Partition selection feature to pages: matches, standings, and statistics.

--- a/app/views/layouts/_global_nav.html.haml
+++ b/app/views/layouts/_global_nav.html.haml
@@ -8,5 +8,5 @@
           - group.sections.each do |section|
             %li.section= link_to section, section_news_path(section.slug)
             %li= link_to 'Vieraskirja', guestbook_path(section.slug)
-            %li= link_to 'Sarjataulukko', standings_path(section.slug)
-            %li= link_to 'Pistepörssi', statistics_path(section.slug)
+            %li= link_to 'Sarjataulukko', latest_standings_path(section.slug)
+            %li= link_to 'Pistepörssi', latest_statistics_path(section.slug)
