--- a/app/views/section/statistics.html.haml
+++ b/app/views/section/statistics.html.haml
@@ -1,7 +1,10 @@
 %header
-  - if @partition and @statistics.size > 0
+  - if @partition and @partition.statistics.size > 0
     %h1= "Pistepörssi kaudella #{@partition.season}, #{@partition.name.downcase}"
   - else
     %h1= "Pistepörssi ei ole saatavilla"
 
-= render :partial => 'section/statistics', :locals => { :statistics => @statistics }
+- if @partition
+  = partition_content_link_list_for(@partition) {|p| show_statistics_path(@section.slug, p) }
+
+= render :partial => 'section/statistics', :locals => { :statistics => @partition.statistics }
