Hand styled cursor to standings admin table.

--- a/app/views/admin/team_standings/edit_multiple.html.haml
+++ b/app/views/admin/team_standings/edit_multiple.html.haml
@@ -28,7 +28,7 @@
           %th H
           %th MS
           %th P
-        %tbody
+        %tbody.team-standings
           - for standing in @standings
             %tr{ :class => !standing.errors.empty? && "row_contains_errors" }
               %td
