Removed obsolete attributes from iframe.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -28,4 +28,4 @@
   
   %section.basic-box
     %iframe{ :src => "http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2FIlmajoenSalibandy&amp;width=350&amp;colorscheme=light&amp;show_faces=true&amp;border_color=#e1e1e2&amp;stream=false&amp;header=false&amp;height=62",
-           :frameborder => 0, :class => 'like-box', :allowTransparency => "true" }
+           :class => 'like-box' }
