--- a/app/views/admin/statistics/edit_all_time_statistics.html.haml
+++ b/app/views/admin/statistics/edit_all_time_statistics.html.haml
@@ -18,6 +18,6 @@
         - for player in @players
           %tr{ :class => [cycle(:odd, :even), !player.errors.empty? && "row_contains_errors"] }
             %td= player
-            %td= number_field_tag "all_time_statistics[#{player.id}][all_time_goals]", player.all_time_goals, :size => 3, :in => 0...300
-            %td= number_field_tag "all_time_statistics[#{player.id}][all_time_assists]", player.all_time_assists, :size => 3, :in => 0...300
+            %td= number_field_tag "all_time_statistics[#{player.id}][all_time_goals]", player.all_time_goals, :size => 4, :in => 0...300, :step => 1
+            %td= number_field_tag "all_time_statistics[#{player.id}][all_time_assists]", player.all_time_assists, :size => 4, :in => 0...300, :step => 1
   = submit_tag 'Tallenna'
