--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -382,20 +382,21 @@ div.parallel-col ul li {
 
 div#player-pic {
   float:left;
+  border:1px solid #CCCCCC;
+  border-radius:3px;
+  margin:0 20px 20px 0;
 }
 
 div#player-pic img {
-  margin:10px;
-}
-
-div#player-info {
-  float:left;
+  margin:4px;
 }
 
 div#player-info ul {
   list-style: none;
   margin:0;
 }
+
+div#player-info ul li { margin-bottom:6px; }
 
 ul#photo-gallery {
   margin:0;
