--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -13,7 +13,7 @@
     
     %link{ :rel => "shortcut icon", :href => "/images/favicon.ico", :type => "image/x-icon"}/
     %title= "ISB Hallintasivut - " + controller.controller_name.capitalize
-    = csrf_meta_tag
+    = csrf_meta_tags
     = javascript_include_tag "modernizr-1.7.min"
     = stylesheet_link_tag "boilerplate", "formtastic.css", "formtastic_changes.css", "admin_style.css", "admin_section_selection"
   
