--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,3 +1,9 @@
+<!--[if lt IE 7 ]> <html lang="fi" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="fi" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="fi" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="fi" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="fi" class="no-js"> <!--<![endif]-->
+
 %head
   %meta{ :charset => 'UTF-8' }
   %meta{ "http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1" }
@@ -7,8 +13,9 @@
   
   %link{ :rel => "shortcut icon", :href => "/images/favicon.ico", :type => "image/x-icon"}/
   %title= "Ilmajoen Salibandy"
-  = stylesheet_link_tag "style.css?v=2", "dropdown", "http://fonts.googleapis.com/css?family=Molengo"
+  = stylesheet_link_tag "application", "http://fonts.googleapis.com/css?family=Molengo"
   = javascript_include_tag "modernizr-1.7.min"
+  
   - if Rails.env.production?
     = javascript_include_tag "http://www.google-analytics.com/urchin.js"
     :javascript
