Assets pipeline tweaking.

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -6,7 +6,6 @@
 
 %head
   %meta{ :charset => 'UTF-8' }
-  %meta{ "http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1" }
   %meta{ :name => "description", :content => "Sähäkkää salibandyä Ilmajoelta" }
   %meta{ :name => "keywords", :content => "Ilmajoen, Salibandy, ISB, Ilmajoki" }
   %meta{ :name => "author", :content => "Ilmajoen Salibandy" }
@@ -14,7 +13,7 @@
   %link{ :rel => "shortcut icon", :href => "/images/favicon.ico", :type => "image/x-icon"}/
   %title= "Ilmajoen Salibandy"
   = stylesheet_link_tag "application", "http://fonts.googleapis.com/css?family=Molengo"
-  = javascript_include_tag "modernizr-1.7.min"
+  = javascript_include_tag "modernizr.custom.js"
   
   - if Rails.env.production?
     = javascript_include_tag "http://www.google-analytics.com/urchin.js"
