--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -6,6 +6,7 @@ body, html {
 }
 
 a { color:#3080c8; }
+
 a:hover, .meta a:hover { color:#4e628b; }
 
 #container { min-height:100%; }
@@ -15,16 +16,11 @@ div.center-wrapper, aside.center-wrapper, nav.center-wrapper{
   width:988px;
 }
 
-#top {
-  height:45px;
-  background-color:#435396;
-}
-
 div#main-header {
   height:175px;
   background-color:#C4D1EB;
   border-top: 2px solid #dae3f6;
-  border-bottom: 2px solid #b0c1e5;
+  border-bottom: 2px solid #435396;
 }
 
 #main-header header{
@@ -34,8 +30,49 @@ div#main-header {
 }
 
 #main-header img {
+  float:left;
   margin:5px 0 0 25px;
   vertical-align:middle;
+}
+
+nav#global-nav {
+  float:left;
+  margin: 128px 0 0 20px;
+}
+
+nav#global-nav ul {
+  list-style:none;
+  padding: 0 20px;
+  margin: 0;
+  font-size: 1.2em;
+}
+
+nav#global-nav ul li {
+  float:left;
+  margin:0 6px 0 6px;
+  padding:13px 20px 0 20px;
+  height:28px;
+  color:#f7f8fb;
+  letter-spacing: 0.1em;
+  background-color:#435396;
+  border:2px solid #b0c1e5;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom:6px solid #435396;
+}
+
+nav#global-nav ul li.selected {
+  background-color:#f7f8fb;
+  border-bottom:6px solid #f7f8fb;
+}
+
+nav#global-nav ul li a {
+  color: #f7f8fb;
+  text-decoration:none;
+}
+
+nav#global-nav ul li.selected a {
+  color: #435396;
 }
 
 .basic-box, #frontpage-news, section#main, article#news, div#frontpage-banner {
