Fixed missing image.

--- a/app/views/layouts/admin/_header.html.haml
+++ b/app/views/layouts/admin/_header.html.haml
@@ -1,4 +1,4 @@
-%img{:src => '/images/isb_logo_small.png', :height => 60, :width => 60}
+= image_tag('isb_logo_small.png', :size => '60x60')
 %h1 Hallintasivut
 
 #sign-out
