--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,4 @@
-%header
+%header#main-header
   = link_to image_tag('isb-logo-shadow.png', :size => '151x170'), '/'
   %nav{ :id => 'global-nav'}
     = render_navigation(:context => :global, :items => generate_global_menu_items, :level => 1)
