--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,9 +1,8 @@
-%aside#supporters{ :class => 'center-wrapper' }
+%aside#supporters
   %h1 Sponsorit
   %ul#supporter-carousel
     - Sponsor.all.each do |sponsor|
       %li= link_to_unless sponsor.url.blank?, image_tag(sponsor.logo.url(:normal), :size => sponsor.logo_dimensions),
         sponsor.url, :rel => "nofollow", :title => sponsor.name
-  
-.center-wrapper
-  %p © Ilmajoen salibandy 2011
+
+%p © Ilmajoen salibandy 2011
