Fixed missing favicon when using the assets pipeline.

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -10,7 +10,7 @@
   %meta{ :name => "keywords", :content => "Ilmajoen, Salibandy, ISB, Ilmajoki" }
   %meta{ :name => "author", :content => "Ilmajoen Salibandy" }
   
-  %link{ :rel => "shortcut icon", :href => "/images/favicon.ico", :type => "image/x-icon"}/
+  =favicon_link_tag "favicon.ico"
   %title= "Ilmajoen Salibandy"
   = stylesheet_link_tag "application", "http://fonts.googleapis.com/css?family=Molengo"
   = javascript_include_tag "modernizr.custom.js"
