--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -13,42 +13,34 @@ a:hover, .meta a:hover { color:#4e628b; }
   min-height:100%;
   width:990px;
   margin:auto;
-  border-left:5px solid #444861;
-  border-right:5px solid #444861;
+  border-left:6px solid #444861;
+  border-right:6px solid #444861;
   background-color:#192154;
 }
 
-div.center-wrapper, aside.center-wrapper, nav.center-wrapper{
-  margin:auto;
-  width:988px;
-}
-
-div#main-header {
-  height:175px;
-  background-color:#C4D1EB;
-  border-top: 2px solid #dae3f6;
-  border-bottom: 2px solid #435396;
-}
-
+/************************************************
+ * Header
+*/
 header#main-header {
   background-color:#4E5582;
-  height:230px;
+  height:170px;
 }
 
 #main-header img {
-  float:left;
-  margin:5px 0 0 25px;
-  vertical-align:middle;
+  
 }
 
-/* SectionGroup level navigation */
+/************************************************
+ * SectionGroup level navigation
+ */
 nav#global-nav {
-  clear:left;
+  display: inline-block;
   background-color:#5F5F61;
-  height: 60px;
+  height: 40px;
 }
 
 nav#global-nav ul {
+  display: inline;
   list-style:none;
   padding: 0 20px;
   margin: 0;
@@ -59,19 +51,13 @@ nav#global-nav ul li {
   float:left;
   margin:0 6px 0 6px;
   padding:13px 20px 0 20px;
-  height:28px;
+  height:26px;
   color:#f7f8fb;
   letter-spacing: 0.1em;
-  background-color:#435396;
-  border:2px solid #b0c1e5;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  border-bottom:6px solid #435396;
 }
 
 nav#global-nav ul li.selected {
   background-color:#f7f8fb;
-  border-bottom:6px solid #f7f8fb;
 }
 
 nav#global-nav ul li a {
@@ -83,7 +69,9 @@ nav#global-nav ul li.selected a {
   color: #435396;
 }
 
-/* Section level navigation */
+/************************************************
+ * Section level navigation 
+ */
 nav#global-sub-nav ul {
   margin: 10px 0 0 173px;
 }
@@ -108,6 +96,7 @@ nav#global-sub-nav ul li.selected a {
   color: #f7f8fb;
 }
 
+
 .basic-box, #frontpage-news, section#main, article#news {
   border:1px solid #e1e1e2;
   margin-top:10px;
@@ -117,6 +106,9 @@ nav#global-sub-nav ul li.selected a {
 
 .frontpage-right-col section { width:359px; }
 
+/************************************************
+ * Section specific navigation
+ */
 nav#section-nav {
   float:left;
   width:210px;
@@ -148,7 +140,9 @@ nav#section-nav ul li {
   font-size:15px;
 }
 
-/* Second level in section navigation */
+/************************************************
+ * Second level in section navigation
+ */
 nav#section-nav ul li ul { border:none; }
 nav#section-nav ul li ul li {
   border:none;
