--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,6 +1,6 @@
 body, html {
   font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-  background-color:#444861;
+  background-color:#fdfdfd;
   color:#565656;
   height:100%;
 }
@@ -11,7 +11,7 @@ a:hover, .meta a:hover { color:#4e628b; }
 
 #container {
   min-height:100%;
-  width:990px;
+  width:996px;
   margin:auto;
   border-left:6px solid #4E5582;
   border-right:6px solid #4E5582;
@@ -24,11 +24,14 @@ a:hover, .meta a:hover { color:#4e628b; }
 header#main-header {
   height:170px;
   background-image: image-url("header.png");
+  border-bottom: 1px solid #444861;
+  margin-bottom: 10px;
 }
 
 #main-header img {
   position: absolute;
   margin:6px 0 0 8px;
+  z-index:10;
 }
 
 /************************************************
@@ -36,31 +39,30 @@ header#main-header {
  */
 nav#global-nav {
   display: inline-block;
-  background-color:#7B6221;
   height: 40px;
   width: 100%;  
   margin-top:130px;
-  
 }
 
 nav#global-nav ul {
   list-style:none;
-  padding: 0 20px;
-  margin: 0 0 0 150px;
+  margin: 0 0 0 165px;
   font-size: 1.2em;
+  text-shadow: #9AA09F 0px 2px 2px;
+  letter-spacing:2px;
 }
 
 nav#global-nav ul li {
   float:left;
-  margin:0 6px 0 6px;
-  padding:13px 20px 0 20px;
-  height:26px;
-  color:#f7f8fb;
-  letter-spacing: 0.1em;
+  margin:3px 10px 0 6px;
+  padding:5px 6px 5px 6px;
+  border-radius: 5px;
 }
 
 nav#global-nav ul li.selected {
-  background-color:#f7f8fb;
+  background-color:#FFFFFF;
+  font-weight: bold;
+  text-shadow:none;
 }
 
 nav#global-nav ul li a {
@@ -122,7 +124,7 @@ nav#section-nav h1 {
   background-color:#435396;
   border:1px solid #e1e1e2;
   color:#f7f8fb;
-  font-size:1.6em;
+  font-size:1.3em;
   line-height:1.7em;
   padding-left:10px;
   margin:0;
@@ -189,7 +191,7 @@ div#frontpage-banner-caption {
   margin-top:-60px;
   left:11px;
   font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
-  font-size:3.1em;
+  font-size:2.2em;
   padding-left:28px;
 }
 
@@ -220,7 +222,7 @@ section#main { overflow:hidden; }
 #main-container h1 {
   font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
   font-weight:normal;
-  font-size: 3em;
+  font-size: 2em;
   margin:10px 0 20px;
   line-height:105%;
   padding: 8px 15px 8px 10px;
@@ -273,7 +275,7 @@ aside#supporters { background-color: #ececec; }
 aside#supporters h1 {
   color:#565656;
   font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
-  font-size:1.7em;
+  font-size:1.6em;
   font-weight:normal;
   margin:0 0 10px 10px;
 }
