--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,4 +2,6 @@
  *= require_self
  *= require normalize.css
  *= require style.css.scss
+ *= require frontpage.css.scss
+ *= require photo-gallery.css.scss
  */
