--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,29 +1,33 @@
-$body-background-blue: #4f5ebd;
+$body-background-color: #4f5ebd;
+$box-border-color: #CCC;
+$blue-background-color: #435396;
+$box-shadow: 2px 2px 12px 1px #cfcdcd;
 
 body, html {
   height:100%;
 }
 body {
   font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-  background-color:#fdfdfd;
-  color:#565656;
   background-image: image-url("background.png");
   background-repeat:repeat-x;
-  background-color: $body-background-blue;
+  background-color: $body-background-color;
   background-position: center top;
 }
 
-a { color:#3080c8; }
-
-a:hover, .meta a:hover { color:#4e628b; }
-
 #container {
-  min-height:100%;
   width:996px;
   margin:auto;
   background-color:#f6f7f9;
-  box-shadow: 0 0 11px 9px darken($body-background-blue, 15%);
+  box-shadow: 0 0 11px 9px darken($body-background-color, 15%);
 }
+
+/************************************************
+ * Links general
+*/
+// 3080c8
+a { color:#ee820f; }
+
+a:hover, .meta a:hover { color:#4e628b; }
 
 /************************************************
  * Header
@@ -32,7 +36,6 @@ header#main-header {
   height:170px;
   background-image: image-url("header.png");
   border-bottom: 1px solid #444861;
-  margin-bottom: 10px;
 }
 
 #main-header img {
@@ -54,9 +57,8 @@ nav#global-nav {
 nav#global-nav ul {
   list-style:none;
   margin: 0 0 0 165px;
-  font-size: 1.2em;
+  font-size: 1.3em;
   text-shadow: #9AA09F 0px 2px 2px;
-  letter-spacing:2px;
 }
 
 nav#global-nav ul li {
@@ -84,8 +86,16 @@ nav#global-nav ul li.selected a {
 /************************************************
  * Section level navigation 
  */
+nav#global-sub-nav {
+  background: $blue-background-color;
+  padding:5px 0 5px 10px;
+  border-bottom: 2px solid lighten($blue-background-color, 10%);
+  text-transform:uppercase;
+}
+
 nav#global-sub-nav ul {
-  margin: 10px 0 0 173px;
+  margin: 0;
+  padding: 0;
 }
 
 nav#global-sub-nav ul li {
@@ -95,28 +105,15 @@ nav#global-sub-nav ul li {
 }
 
 nav#global-sub-nav ul li.selected {
-  background-color: #435396;
+  background-color: darken($blue-background-color, 7%);
   border-radius: 6px;
-  border: 1px solid #50609f;
-} 
+  border: 1px solid darken($blue-background-color, 7%);
+}
 
 nav#global-sub-nav ul li a {
-  color: #435396;
+  color: white;
+  text-decoration: none;
 }
-
-nav#global-sub-nav ul li.selected a {
-  color: #f7f8fb;
-}
-
-
-.basic-box, #frontpage-news, section#main, article#news {
-  border:1px solid #e1e1e2;
-  margin-top:10px;
-  padding:8px;
-  background-color:#ffffff;
-}
-
-.frontpage-right-col section { width:359px; }
 
 /************************************************
  * Section specific navigation
@@ -125,24 +122,14 @@ nav#section-nav {
   float:left;
   width:210px;
   margin:10px 10px 0 0;
-}
-
-nav#section-nav h1 {
-  background-color:#435396;
-  border:1px solid #e1e1e2;
-  color:#f7f8fb;
-  font-size:1.3em;
-  line-height:1.7em;
-  padding-left:10px;
-  margin:0;
+  box-shadow: $box-shadow;
+  border:1px solid $box-border-color;
+  background-color:#ffffff;
 }
 
 nav#section-nav ul {
-  margin:0 4px 0 4px;
-  padding:0 10px 10px 10px;
-  border:1px solid #e1e1e2;
-  border-top:none;
-  background-color:#ffffff;
+  margin:0;
+  padding:0 5px 5px 5px;
 }
 
 nav#section-nav ul li {
@@ -164,8 +151,38 @@ nav#section-nav ul li ul li {
 
 a.selected { text-decoration: none; }
 
+/************************************************
+ * Generic basic box
+ */
+.basic-box {
+  border:1px solid #CCC;
+  margin-top:10px;
+  padding:8px;
+  background-color:#ffffff;
+  box-shadow: $box-shadow;
+}
+
+/************************************************
+ * Pagination
+ */
 nav.pagination {
   margin: 10px 0 10px;
+}
+
+/************************************************
+ * Footer
+ */
+footer {
+  margin-top:20px;
+  width:100%;
+  height: 210px;
+  background: $blue-background-color;
+  clear:both;
+  color: #FFFFFF;
+}
+
+ul#supporter-carousel {
+  display:none;
 }
 
 .jcarousel-item {
@@ -176,57 +193,34 @@ nav.pagination {
   border:none;
 }
 
-.jcarousel-clip-horizontal { overflow-x: hidden; }
-
-div#frontpage-banner { padding:0; }
-
-div#frontpage-banner img {
-  border:1px solid #CCC;
-  margin:10px 0 0 10px;
+.jcarousel-clip-horizontal {
+  overflow-x: hidden;
 }
 
-article#news header h1, h2.news { text-transform:uppercase;}
-
-div#frontpage-banner-caption {
-  opacity:0.85;
-  background-color:#F7F9FD;
-  position:relative;
-  overflow:hidden;
-  width:938px;
-  height:60px;
-  top:444px;
-  margin-top:-60px;
-  left:11px;
-  font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
-  font-size:2.2em;
-  padding-left:28px;
+.jcarousel-container-horizontal {
+  width:954px;
+  padding-left:10px;
 }
 
-div.frontpage-right-col, section#frontpage-news {
-  float:left;
-  margin-bottom:10px;
+/************************************************
+ * News
+ */
+article#news header h1, h2.news {
+  text-transform:uppercase;
 }
 
-section, article#news {
-  background-color:#ffffff;
-  box-shadow: 2px 2px 5px #cfcdcd;
+.entry {
+  margin: 20px 0 20px;
 }
 
-section#frontpage-matches {
-  width:350px;
-}
-
-section#frontpage-news {
-  width:565px;
-  margin:10px 10px 0 10px;
-}
-
+/************************************************
+ * Main container
+ */
 div#main-container {
-  padding-bottom:310px; /*footer height + 40px*/
   overflow:auto;
+  // Add some empty space before footer for drop shadows
+  padding: 0 10px 10px 10px;
 }
-section#main { overflow:hidden; }
-
 #main-container h1 {
   font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
   font-weight:normal;
@@ -255,6 +249,16 @@ section#main { overflow:hidden; }
   padding:0;
 }
 
+/************************************************
+ * Main content
+ */
+section#main {
+  overflow: hidden;
+}
+
+/************************************************
+ * Meta information
+ */
 .meta {
   color:#999;
   font-size:11px;
@@ -274,37 +278,9 @@ article p {
   margin:10px 0 0 10px;
 }
 
-.entry {
-  margin: 20px 0 20px;
-}
-
-aside#supporters { background-color: #ececec; }
-
-aside#supporters h1 {
-  color:#565656;
-  font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
-  font-size:1.6em;
-  font-weight:normal;
-  margin:0 0 10px 10px;
-}
-
-.jcarousel-container-horizontal {
-  width:954px;
-  padding-left:10px;
-}
-
-ul#supporter-carousel { display:none; }
-
-footer {
-  position: relative;
-  width:100%;
-  margin-top:-270px;
-  height:270px;
-  background:#435396;
-  clear:both;
-  color: #FFFFFF;
-}
-
+/************************************************
+ * Guestbook
+ */
 form.comment ol {
   list-style: none;
 }
@@ -326,6 +302,9 @@ form.comment fieldset.inputs input {
   width:300px;
 }
 
+/************************************************
+ * Links
+ */
 dl#links dt {
   margin-top:10px;
   font-weight:bold;
@@ -336,6 +315,9 @@ dl#links dd {
   padding-left:10px;
 }
 
+/************************************************
+ * Statistics
+ */
 table#statistics thead tr th {
   padding: 0 5px 0 5px;
 }
@@ -356,10 +338,16 @@ table#statistics tbody tr td:first-child {
   text-align:left;
 }
 
+/************************************************
+ * Table general
+ */
 tr.even {
   background-color:#EEEEEE;
 }
 
+/************************************************
+ * Team page
+ */
 div.parallel-col {
   float:left;
   margin-right: 100px;
@@ -375,6 +363,9 @@ div.parallel-col ul li {
   line-height: 1.8em;
 }
 
+/************************************************
+ * Player page
+ */
 div#player-pic {
   float:left;
   border:1px solid #CCCCCC;
@@ -393,77 +384,9 @@ div#player-info ul {
 
 div#player-info ul li { margin-bottom:6px; }
 
-ul#photo-gallery {
-  margin:0;
-}
-
-ul#photo-gallery li {
-  list-style:none;
-  width:355px;
-  margin:0 0 20px 10px;
-  display:inline-block;
-  vertical-align:top;
-  background:#F7F9FD;
-  border:1px solid #E7F0F5;
-}
-
-ul#photo-gallery li article {
-  padding:10px;
-  vertical-align:top;
-}
-
-ul#photo-gallery li article img {
-  float:left;
-  margin:0 10px 10px 0;
-}
-
-ul#photo-gallery li article h1 {
-  font-size: 1.4em;
-  margin:0 0 6px 0;
-  padding:0;
-  vertical-align:top;
-}
-
-div#photo-album {
-  margin-left:0px;
-}
-
-div#photo-album img {
-  margin:1px;
-  vertical-align: middle;
-}
-
-img.gallery-photo {
-  border:1px solid #CCCCCC;
-  padding:4px;
-  display:block;
-  margin-left:auto;
-  margin-right:auto;
-}
-
-nav.photo-pagination {
-  margin:5px;
-  text-align:center;
-}
-
-.photo-pagination a { margin:0 9px 0 9px; }
-
-p.caption {
-  font-weight: bold;
-  margin-left:10px;
-}
-
-.picasa-link img {
-  margin-top:20px;
-}
-
-iframe.like-box {
-  overflow:hidden;
-  width:350px;
-  height:62px;
-  border:none;
-}
-
+/************************************************
+ * History page
+ */
 ul.seasons {
   list-style: none;
 }
