--- a/app/views/section/new_guestbook_message.html.haml
+++ b/app/views/section/new_guestbook_message.html.haml
@@ -1,11 +1,18 @@
+- content_for :javascript do
+  :javascript
+    $(document).ready(function() {
+      $('#comment_honeypot').val('#{Comment::HONEYPOT_SECRET}');
+    });
+
 %header
   %h1 Kirjoita vieraskirjaan
   
 = semantic_form_for @message, :url => guestbook_path(@section.slug) do |form|
-  = text_field_tag :name, nil, :style => 'display:none'
+  = text_field_tag 'comment[honeypot]', nil, :class => 'honeypot'
+  
   = form.inputs do
-    = form.input :title, :label => 'Otsikko', :input_html => { :size => 60 }
     = form.input :author, :label => 'Kirjoittaja', :input_html => { :size => 40 }
+    = form.input :title, :label => 'Otsikko', :input_html => { :size => 60 }
     = form.input :email, :label => 'Sähköposti', :input_html => { :size => 256 }
     = form.input :content, :label => 'Viesti', :input_html => { :rows => 10, :cols => 70 }
   
