Fixed modernizer js lib import.

--- a/app/views/layouts/admin/devise.html.haml
+++ b/app/views/layouts/admin/devise.html.haml
@@ -14,7 +14,7 @@
     %link{ :rel => "shortcut icon", :href => "/images/favicon.ico", :type => "image/x-icon"}/
     %title= "Ilmajoen salibandy - Hallintasivut"
     = csrf_meta_tag
-    = javascript_include_tag "modernizr-1.7.min"
+    = javascript_include_tag "modernizr.custom.js"
     = stylesheet_link_tag "boilerplate", "devise.css"
   
   %body
