--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -14,7 +14,7 @@
     =favicon_link_tag "favicon.ico"
     %title= "ISB Hallintasivut - " + controller.controller_name.capitalize
     = csrf_meta_tags
-    = javascript_include_tag "modernizr-1.7.min"
+    = javascript_include_tag "modernizr.custom.js"
     = stylesheet_link_tag "boilerplate", "formtastic.css", "formtastic_changes.css", "admin_style.css", "admin_section_selection"
   
   %body
